# fortilog

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  config.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ui.txt  requirements.txt  run_ui.sh
.github/workflows/: ci.yml
data/: fortinet_ranges.netset
docs/: PROCEDURE_BASES_GEO.md
fortilog/: ack.py  actors.py  analysis.py  bases.py  common.py  compare.py  confaudit.py  confdiff.py  confgen.py  correlate.py  detect.py  excel.py  fetch_fortinet_ranges.py  geo.py  ingest.py  main.py  normalize.py  parse.py  report.py  suivi.py  ui_helpers.py  utm_stats.py  validate.py
tests/: conftest.py  test_actors.py  test_analysis.py  test_bases.py  test_cli.py  test_compare.py  test_confaudit.py  test_confdiff.py  test_confgen.py  test_correlate.py  test_detect.py  test_geo.py  test_ingest.py  test_integration.py  test_normalize.py  test_parse.py  test_suivi.py  test_ui_helpers.py  test_utm_stats.py  test_validate.py
tests/fixtures/: confaudit_clean.conf  confaudit_compromis.conf  confdiff_current.conf  confdiff_ok.conf  confgen_sample.conf  geo_asn_mini.tsv  geo_country_mini.csv  reputation_bogon.netset  reputation_mini.netset
