[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortilog"
version = "1.0.0"
description = "Analyseur de logs FortiGate — détection d'indices de compromission"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Louis-Alexis Fontaine", email = "flab@mac.com" }]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0,<4",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "XlsxWriter>=3.0",
    "openpyxl>=3.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
ui  = ["streamlit>=1.30"]
dev = ["pytest>=7"]

[project.scripts]
fortilog        = "fortilog.main:main"
fortilog-diff   = "fortilog.confdiff:main"
fortilog-confgen = "fortilog.confgen:main"
fortilog-ack    = "fortilog.ack:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fortilog*"]

[tool.pytest.ini_options]
markers = ["slow: tests sur vrais logs FortiGate (nécessite les exports locaux)"]
